--- a/jquery/index1.html
+++ b/jquery/index1.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>jquery tutorial 1</title>
-</head>
-<body>
-    
-
+  </head>
+  <body>
     <script src="jquery.js"></script>
     <script>
-        $(document).ready(function(){
-            console.log("Ram Kumar");
-        })
+      $(document).ready(function () {
+        console.log("Ram Kumar");
+      });
     </script>
-</body>
+  </body>
 </html>
